feat: Response format can be controlled via the `accept` header
